# skywatch

./: README.md  config.yml  pyproject.toml
pretty/: about.html  index.html
pretty/assets/css/: style.css
pretty/assets/js/: app.js  export.js
pretty/templates/: base.html  footer.html  header.html
reports/: __main__.py  fire.py  turkey.py
